Fix ticker: absolute fill hero, centered vertically, hero overflow clips edges

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,13 +18,13 @@
   background: $black;
 
   &__ticker-wrap {
-    flex: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     display: flex;
     align-items: center;
-    width: 100%;
-    min-height: 0;
-    overflow-x: clip;
-    overflow-y: visible;
     z-index: 1;
     mask-image: linear-gradient(to right, transparent 0%, black 15%, black 85%, transparent 100%);
     -webkit-mask-image: linear-gradient(to right, transparent 0%, black 15%, black 85%, transparent 100%);
